Define first settings

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -1,13 +1,53 @@
+---
+title: "Darwin Core checklist mapping"
+subtitle: "For: Checklist title"
+author:
+- author_1
+- author_2
+date: "`r Sys.Date()`"
+output:
+  html_document:
+    toc: true
+    toc_depth: 3
+    toc_float: true
+    number_sections: true
+---
+
 
 # Setup
 
-```{r}
-library('rgbif')
-library('dplyr')
-library('assertthat')
-library('assertable')
+```{r setup, echo = FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 ```
 
+Use UTF-8 character encoding:
+
+LR: Hier verschillende codering voor verschillende OS geven:
+
+```{r}
+# This works on Mac OS X, might not work on other OS
+Sys.setlocale("LC_CTYPE", "en_US.UTF-8")
+```
+
+Load libraries:
+
+```{r}
+library(tidyverse)       # To transform data
+library(magrittr)        # For %<>% pipes
+library(readxl)          # To read Excel files
+library(digest)          # To generate hashes
+library(rgbif)
+library(assertthat)
+library(assertable)
+```
+
+# Read and pre-process raw data
+
+Create a data frame `raw_data` from the source data:
+
+```{r}
+raw_data <- read_excel(path = "../data/raw/checklist.xlsx") 
+```
 
 
 # Create taxon core
