--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -37,6 +37,7 @@ library(magrittr)        # For %<>% pipes
 library(readxl)          # To read Excel files
 library(digest)          # To generate hashes
 library(rgbif)
+library(inborutils)     
 library(assertthat)
 library(assertable)
 ```
